tests/baselines/reference/YieldStarExpression3_es6.errors.txt
error TS2318: Cannot find global type 'IterableIterator'.
tests/cases/conformance/es6/yieldExpressions/YieldStarExpression3_es6.ts(2,12): error TS1109: Expression expected.


!!! error TS2318: Cannot find global type 'IterableIterator'.
==== tests/cases/conformance/es6/yieldExpressions/YieldStarExpression3_es6.ts (1 errors) ====
    function *g() {
        yield *;
               ~
!!! error TS1109: Expression expected.
    }